samples/_failures_safe/1761184060_0ae420_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c937ad24.c: In function ‘main’:
./samples/SAFE/__tmp_c937ad24.c:153:5: error: expected expression at end of input
  153 |     for (int i = 0; i < edge_count;
      |     ^~~
./samples/SAFE/__tmp_c937ad24.c:153:5: error: expected declaration or statement at end of input
